--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,13 +16,14 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
       {% if site.logo %}
-      <img src="{{site.logo | relative_url}}" alt="Logo" />
+      <a href="{{ "/" | absolute_url }}"> 
+        <img src="{{site.logo | relative_url}}" alt="Logo" />
+      </a>
       {% endif %}
 
-      <p>{{ site.description | default: site.github.project_tagline }}</p>
+      <p class="site-description">{{ site.description | default: site.github.project_tagline }}</p>
 
       {% if site.github.is_project_page %}
       <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub
@@ -33,9 +34,9 @@
       <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
       {% endif %}
 
-    
+
     </header>
-    
+
     <section>
 
       {{ content }}
