--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -56,7 +56,7 @@ a:hover small {
 }
 
 .wrapper {
-  width:860px;
+  width:90%;
   margin:0 auto;
 }
 
@@ -172,7 +172,7 @@ strong {
 }
 
 section {
-  width:500px;
+  width:70%;
   float:right;
   padding-bottom:50px;
 }
@@ -210,7 +210,8 @@ footer {
   }
 
   header {
-    padding-right:320px;
+    padding-right:15%;
+    padding-left: 15%;
   }
 
   section {
@@ -276,9 +277,29 @@ footer {
 .social-media-list {
   list-style: none;
   margin-left: 0;
+  display: ruby-base-container;
 }
 
 .social-links{
-  display: inline;
-  color:#222
+  display: block;
+  color:#222;
+}
+
+.svg-icon {
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  fill: currentColor;
+  padding: 5px 3px 2px 5px;
+  vertical-align: text-bottom;
+}
+
+.grey {
+  color: #828282;
+}
+
+.site-description{
+  padding-left: 5%;
+  padding-right: 5%;
+  text-align: center;
 }
