--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -108,6 +108,7 @@ header {
   width:270px;
   float:left;
   position:fixed;
+  align-content: center;
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
@@ -212,6 +213,7 @@ footer {
   header {
     padding-right:15%;
     padding-left: 15%;
+    align-content: center;
   }
 
   section {
@@ -286,10 +288,10 @@ footer {
 }
 
 .svg-icon {
-  width: 16px;
-  height: 16px;
+  width: 32px;
+  height: 32px;
   display: inline-block;
-  
+
   fill: currentColor;
   padding: 5px 3px 2px 5px;
   vertical-align: text-bottom;
@@ -302,5 +304,5 @@ footer {
 .site-description{
   padding-left: 5%;
   padding-right: 5%;
-  text-align: center;
+  text-align: justify;
 }
