--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,11 +24,10 @@
       {% endif %}
 
       <p class="site-description">{{ site.description | default: site.github.project_tagline }}</p>
-
-      {% if site.github.is_project_page %}
-      <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub
-          <small>{{ site.github.repository_nwo }}</small></a></p>
-      {% endif %}
+      <p class="Inicio"><a href="">Inicio</a></p>
+      <p class="Membros"><a href="\membros">Membros</a></p>
+      <p class="Projetos"><a href="\projetos">Projetos</a></p>
+      <p class="Sobre"><a href="\sobre">Sobre nós</a></p>
 
     </header>
 
