--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -309,6 +309,7 @@ footer {
 
 .nav-wrapper{
   margin-top: 15%;
+  margin-bottom: 15%;;
 }
 
 .nav-button{
@@ -328,4 +329,19 @@ footer {
 {
   transition: 0.5s;
   background-color: #f29d10;
+}
+
+@media (max-height: 720px){
+  
+  .nav-wrapper{
+    margin-top: 2%;
+    margin-bottom: 2%;
+  }
+  
+  .nav-button{
+    font-size: 16px;
+    margin-top: 2%;
+    width: 100%;
+  }
+
 }
