--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -353,8 +353,10 @@ footer {
   text-align: center;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  width: 100%;
+  height: 220px;
+  overflow: scroll;
  }
- 
  
 .item{
   color:#727272;
