--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,10 @@
       <div class="social-links">
         {%- include social.html -%}
       </div>
-
+      <div id="mail-wrapper">
+        <p>colmeiacct@gmail.com</p>
+      </div>
+</div>
     </header>
 
     <section>
